--- a/scss/5-modules/_featured-section.scss
+++ b/scss/5-modules/_featured-section.scss
@@ -129,7 +129,7 @@
                     -webkit-line-clamp: 1;
                     -webkit-box-orient: vertical;
                     overflow: hidden;
-                    margin-bottom: $size-1;
+                    margin-bottom: $size-half;
                 }
 
                 p {
