--- a/scss/5-modules/_hero-section.scss
+++ b/scss/5-modules/_hero-section.scss
@@ -146,7 +146,8 @@
 
             .preview-circle-wrapper {
                 position: absolute;
-
+                width: auto;
+                
                 .preview-circle {
                     position: absolute;
                     border-radius: 999px;
@@ -177,7 +178,7 @@
                 }
 
                 &.main {
-                    position: relative;
+                    position: absolute;
                     z-index: 3;
 
                     .preview-circle {
@@ -235,6 +236,7 @@
             }
 
             &.group-1 {
+
                 .main {
                     top: 30px;
                     left: 40px;
@@ -266,23 +268,6 @@
                 .tertiary {
                     top: 0px;
                     left: 200px;
-                }
-            }
-
-            &.group-3 {
-                .main {
-                    top: -10px;
-                    left: 180px;
-                }
-
-                .secondary {
-                    top: 255px;
-                    left: -20px;
-                }
-
-                .tertiary {
-                    top: 330px;
-                    left: 531px;
                 }
             }
 
